--- a/Changes
+++ b/Changes
@@ -1,6 +1,6 @@
 Revision history for Perl extension Moxie
 
-0.06
+0.06 2017-10-30
     [FEATURE CHANGES]
     - Changed the name of BUILDARGS:init_arg to BUILDARGS:init
       as the ARGS/args was redundant
@@ -13,6 +13,11 @@ Revision history for Perl extension Moxie
       slot => 0 to not work
 
 0.05 2017-10-21
+    [NEW FEATURE]
+    - added the `lazy(slot?)` trait, it uses the body of
+      the method it is attached to as the initializer for
+      the specified slot
+
     [FEATURE CHANGES]
     - restored the `private` trait and ceased it being
       the default behavior as a result of a `has` call
