--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Perl extension Moxie
 
+0.07
+    [ENHANCEMENTS]
+    - it is now posible to say `required => 1` and have that
+      expand to a default error message
+
 0.06 2017-10-30
     [FEATURE CHANGES]
     - Changed the name of BUILDARGS:init_arg to BUILDARGS:init
