--- a/Changes
+++ b/Changes
@@ -13,6 +13,7 @@ Revision history for Perl extension Moxie
         - added `lazy` and `private` as two features which
           now require you to pass the `:experimental` tag
           within the `traits` listing.
+        - this may all change in future releases, we will see
 
 0.06 2017-10-30
     [FEATURE CHANGES]
