noting some changes

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Moxie
 
+0.08
+    - some small types fixed by Aaron Crane
+
 0.07 2017-11-16
     [ENHANCEMENTS]
     - it is now posible to say `required => 1` and have that
